<resources>
    <string name="app_name" translatable="false">Groufr</string>
    <string name="login_title">Sign in</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="logo_content_description" translatable="false">Groufr logo</string>
    <string name="menu_content_description">Menu</string>
    <string name="profile_title">Profile</string>
    <string name="profile_logout">Log out</string>
    <string name="profile_application">Application</string>
    <string name="profile_version">Version</string>
    <string name="profile_website">Website</string>
    <string name="profile_developer">Developer</string>
    <string name="profile_developer_value" translatable="false">Celdy technology, s.r.o.</string>
    <string name="profile_developer_web">Web</string>
    <string name="profile_signout">Sign out</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_calendar_sync">Sync to calendar</string>
    <string name="profile_calendar_permission_denied">Calendar permission is required to sync events</string>
    <string name="profile_calendar_sync_error">Failed to create calendar. Check app permissions.</string>
    <string name="chat_system_user">System</string>
    <string name="chat_generic_user">User</string>
    <string name="chat_joined_group">%1$s joined the group</string>
    <string name="chat_event_created">%1$s created a new event: %2$s</string>
    <string name="chat_poll_created">%1$s created a poll: %2$s</string>
    <string name="chat_poll_created_due">%1$s created a poll: %2$s (due %3$s)</string>
    <string name="chat_event_fallback" translatable="false">event</string>
    <string name="chat_poll_fallback" translatable="false">poll</string>
    <string name="groups_title">Groups</string>
    <string name="groups_empty">No groups yet.</string>
    <string name="groups_error">Unable to load groups. Please try again.</string>
    <string name="messages_empty">No messages yet.</string>
    <string name="messages_error">Unable to load messages.</string>
    <string name="message_input_hint">Write a message</string>
    <string name="message_send">Send</string>
    <string name="polls_title">Polls</string>
    <string name="polls_empty">No polls yet.</string>
    <string name="polls_error">Unable to load polls.</string>
    <string name="poll_detail_title">Poll</string>
    <string name="poll_detail_error">Unable to load poll.</string>
    <string name="poll_vote_button">Vote</string>
    <string name="poll_vote_change_button">Change vote</string>
    <string name="poll_clear_button">Clear vote</string>
    <string name="poll_status_open">Open</string>
    <string name="poll_status_closed">Closed</string>
    <string name="poll_votes_format">Voters: %1$d</string>
    <string name="poll_voters_title">Voters</string>
    <string name="poll_voters_empty">No voters yet.</string>
    <string name="poll_deadline_format">Deadline: %1$s</string>
    <string name="events_title">Events</string>
    <string name="events_empty">No events yet.</string>
    <string name="events_error">Unable to load events.</string>
    <string name="events_filter_upcoming">Upcoming</string>
    <string name="events_filter_past">Past</string>
    <string name="events_filter_all">All</string>
    <string name="events_filter_participation_going_maybe">Going &amp; Maybe</string>
    <string name="events_filter_participation_unresponded">No response</string>
    <string name="events_filter_participation_going">Going</string>
    <string name="events_filter_participation_maybe">Maybe</string>
    <string name="events_filter_participation_declined">Declined</string>
    <string name="events_filter_participation_all">All</string>
    <string name="events_filter_time_title">Filter by time</string>
    <string name="events_filter_participation_title">Filter by participation</string>
    <string name="event_detail_title">Event</string>
    <string name="event_detail_error">Unable to load event.</string>
    <string name="event_join_button">Join</string>
    <string name="event_decline_button">Decline</string>
    <string name="event_start_prefix">Start:</string>
    <string name="event_end_prefix">End:</string>
    <string name="event_deadline_prefix">Join by:</string>
    <string name="event_create_title">Create event</string>
    <string name="event_create_action">Create</string>
    <string name="event_create_button">Create event</string>
    <string name="event_create_success">Event created.</string>
    <string name="event_edit_title">Edit event</string>
    <string name="event_edit_button">Save changes</string>
    <string name="event_edit_success">Event updated.</string>
    <string name="event_date_not_set">Date not set</string>
    <string name="event_date_end_prefix">end</string>
    <string name="event_status_dialog_title">Change event status</string>
    <string name="event_status_offered">Proposal</string>
    <string name="event_status_preparing">Confirmed</string>
    <string name="event_status_closed">Finished</string>
    <string name="event_status_cancelled">Cancelled</string>
    <string name="event_menu_info">Info</string>
    <string name="event_menu_chat">Chat</string>
    <string name="event_menu_participants">Participants</string>
    <string name="event_menu_edit">Edit</string>
    <string name="event_chat_new_messages">New messages</string>
    <string name="event_your_status_label">Your status</string>
    <string name="event_participant_joined">Going</string>
    <string name="event_participant_maybe">Maybe</string>
    <string name="event_participant_declined">Declined</string>
    <string name="event_participant_invited">Invited</string>
    <string name="event_participant_not_invited">Not responded</string>
    <string name="event_summary_joined">Joined %1$d</string>
    <string name="event_summary_maybe">Maybe %1$d</string>
    <string name="event_summary_declined">Declined %1$d</string>
    <string name="event_summary_invited">Invited %1$d</string>
    <string name="event_role_owner">Owner</string>
    <string name="event_role_admin">Admin</string>
    <string name="event_role_participant">Participant</string>
    <string name="event_role_guest">Guest</string>
    <string name="event_title_hint">Title</string>
    <string name="event_description_hint">Description</string>
    <string name="event_place_hint">Place (optional)</string>
    <string name="event_state_hint">State</string>
    <string name="event_start_hint">Start at (YYYY-MM-DDTHH:MM:SS+00:00)</string>
    <string name="event_end_hint">End at (optional)</string>
    <string name="event_deadline_hint">Join deadline (optional)</string>
    <string name="event_min_participants_hint">Min participants (optional)</string>
    <string name="event_max_participants_hint">Max participants (optional)</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_empty">No notifications yet.</string>
    <string name="notifications_error">Unable to load notifications.</string>
    <string name="notifications_unread_only">Unread only</string>
    <string name="notifications_mark_all_read">Mark all read</string>
    <string name="notification_title_event_created">%1$s created an event</string>
    <string name="notification_title_event_updated">%1$s updated an event</string>
    <string name="notification_title_new_message">%1$s sent a message</string>
    <string name="notification_title_poll_created">%1$s created a poll</string>
    <string name="notification_title_poll_closed">%1$s closed a poll</string>
    <string name="notification_title_user_joined">%1$s joined the group</string>
    <string name="notification_title_participant_status_changed">%1$s updated event participation</string>
    <string name="notification_title_invitation_received">%1$s invited you to join a group</string>
    <string name="notification_title_event_invitation_received">%1$s invited you to an event</string>
    <string name="notification_title_event_poll_created">%1$s created an event poll</string>
    <string name="notification_title_event_poll_closed">%1$s closed an event poll</string>
    <string name="notification_title_reaction_message">%1$s reacted %2$s to a message</string>
    <string name="notification_title_reaction_event">%1$s reacted %2$s to an event</string>
    <string name="notification_title_reaction_poll">%1$s reacted %2$s to a poll</string>
    <string name="notification_title_expense_created">%1$s added an expense</string>
    <string name="notification_title_expense_updated">%1$s updated an expense</string>
    <string name="notification_title_expense_confirmed">%1$s confirmed an expense</string>
    <string name="notification_title_expense_disputed">%1$s disputed an expense</string>
    <string name="notification_title_expense_due_reminder">Expense due soon</string>
    <string name="notification_title_expense_overdue">Expense is overdue</string>
    <string name="notification_title_expense_mediation_needed">Expense needs mediation</string>
    <string name="notification_title_settlement_payment_created">%1$s sent you a payment</string>
    <string name="notification_title_settlement_payment_confirmed">%1$s confirmed your payment</string>
    <string name="notification_title_settlement_payment_rejected">%1$s rejected your payment</string>
    <string name="notification_title_generic" translatable="false">%1$s %2$s</string>
    <string name="notification_channel_name">Notifications</string>
    <string name="notification_channel_description">Updates about new activity in Groufr.</string>
    <string name="notification_system_title">New notifications</string>
    <plurals name="notification_summary">
        <item quantity="one">%d new notification</item>
        <item quantity="other">%d new notifications</item>
    </plurals>
    <plurals name="notification_more">
        <item quantity="one">+%d more</item>
        <item quantity="other">+%d more</item>
    </plurals>
    <string name="poll_create_title">Create poll</string>
    <string name="poll_create_action">Create</string>
    <string name="poll_create_button">Create poll</string>
    <string name="poll_create_success">Poll created.</string>
    <string name="poll_question_hint">Question</string>
    <string name="poll_description_hint">Description</string>
    <string name="poll_multiselect_label">Allow multiple choices</string>
    <string name="poll_options_label">Options</string>
    <string name="poll_add_option">Add option</string>
    <string name="poll_deadline_hint">Deadline (tap to auto-fill)</string>
    <string name="poll_option_hint">Option</string>
    <string name="message_menu_react">React</string>
    <string name="message_menu_report">Report message</string>
    <string name="message_menu_reply">Reply</string>
    <string name="reaction_menu_react">React</string>
    <string name="reaction_dialog_title">Choose a reaction</string>
    <string name="report_dialog_reason_label">Select reason</string>
    <string name="report_dialog_comment_hint">Additional details (optional)</string>
    <string name="report_reason_spam">Spam</string>
    <string name="report_reason_harassment">Harassment or bullying</string>
    <string name="report_reason_hate_speech">Hate speech</string>
    <string name="report_reason_illegal">Illegal content</string>
    <string name="report_reason_violence">Violence or threats</string>
    <string name="report_reason_inappropriate">Inappropriate content</string>
    <string name="report_reason_other">Other</string>
    <string name="expense_currency_hint">Currency</string>
    <string name="settlement_amount_hint">Amount (cents)</string>
    <string name="settlement_note_hint">Note (optional)</string>
    <string name="settlement_recipient_hint">Recipient</string>
    <string name="settings_title">Settings</string>
</resources>