<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_event_info"
        android:icon="@drawable/event_info"
        android:title="@string/event_menu_info"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_event_chat"
        android:icon="@drawable/event_chat"
        android:title="@string/event_menu_chat"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_event_participants"
        android:icon="@drawable/event_participant"
        android:title="@string/event_menu_participants"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_event_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/event_menu_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_event_react"
        android:title="@string/reaction_menu_react"
        app:showAsAction="never" />
</menu>
